<?xml version="1.0" encoding="utf-8"?>

  <resources>
    <string name="app_name">Manusa</string>
    <string name="showPlantButton">View installation</string>
    <string name="createWorkReportButton">Create report</string>
    <string name="option">Settings</string>
    <string name="secondary">secondary</string>
    <string name="plantNumber">Plant N°</string>
    <string name="plantState">Status</string>
    <string name="shipmentDate">Shipment date</string>
    <string name="dateWarranty">Warranty date</string>
    <string name="warrantyType">Warranty type</string>
    <string name="supplyType">Supply type</string>
    <string name="doorDetails">Details</string>
    <string name="plantAddress">Address</string>
    <string name="doorType">Type</string>
    <string name="motorType">Automation</string>
    <string name="shutterType">Shutter</string>
    <string name="colorType">Color type</string>
    <string name="color">Color</string>
    <string name="glassType">Glass type</string>
    <string name="city">City</string>
    <string name="motorDescription">Automation description</string>
    <string name="manualInsertion">Type code</string>
    <string name="cameraInsertion">Camera scan</string>
    <string name="manualInsertionok">OK</string>
    <string name="manualInsertionBack">Back</string>
    <string name="itemSelectorChoosen">Done</string>
    <string name="dashboard_action">Action</string>
    <string name="insertplan">Please insert the plan id manually or use the camera for as a barcode reader</string>
    
    <color name="color1">#008C9E</color>
    <color name="color2">#343838</color>
    <color name="color3">#005F6B</color>
    <color name="color4">#00B4CC</color>
    <color name="color5">#00DFFC</color>

</resources>