<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent" android:layout_height="match_parent"
	android:orientation="vertical">
	<ScrollView android:layout_height="fill_parent"
		android:layout_width="fill_parent">
		<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
			android:layout_width="match_parent" android:layout_height="match_parent"
			android:orientation="vertical" android:id="@+id/plantListViewerLayout">

			<Button style="@style/Titles" android:text="@string/plantNumber" />

			<TextView style="@style/Text" android:id="@+id/plantNumberText"
				android:text="downloading..." />


			<Button style="@style/Titles" android:text="@string/plantState" />

			<TextView style="@style/Text" android:text="downloading..."
				android:id="@+id/plantStateText" />


			<Button style="@style/Titles" android:text="@string/shipmentDate" />

			<TextView style="@style/Text" android:text="downloading..."
				android:id="@+id/plantShipmentDateText" />

			<Button style="@style/Titles" android:text="@string/dateWarranty" />

			<TextView style="@style/Text" android:text="downloading..."
				android:id="@+id/plantDateWarrantyText" />

			<Button style="@style/Titles" android:text="@string/warrantyType" />

			<TextView style="@style/Text" android:text="downloading..."
				android:id="@+id/plantWarrantyTypeText" />

			<Button style="@style/Titles" android:text="@string/supplyType" />

			<TextView style="@style/Text" android:text="downloading..."
				android:id="@+id/plantSupplyTypeText" />

			<Button style="@style/Titles" android:text="@string/city" />

			<TextView style="@style/Text" android:text="downloading..."
				android:id="@+id/plantCityText" />


			<Button style="@style/Titles" android:text="@string/plantAddress" />

			<TextView style="@style/Text" android:text="downloading..."
				android:id="@+id/plantAddressText" />

		



		</LinearLayout>

	</ScrollView>
</LinearLayout>
